--- a/manifests/ops-files/non-precompiled-releases.yml
+++ b/manifests/ops-files/non-precompiled-releases.yml
@@ -1,5 +1,5 @@
-- type: replace
-  path: /releases
+- path: /releases
+  type: replace
   value:
   - name: kubo
     sha1: d3f72f85fd5d5ebfcf942117f56c7ac2d6f8d81b
@@ -11,7 +11,7 @@
     version: 1.8.0
   - name: docker
     sha1: 8836ed245406abea5eaa0b3aacb568ea421eb7b3
-    url: https://github.com/cloudfoundry-incubator/docker-boshrelease/releases/download/v33.0.0/docker-33.0.0.tgz
+    url: https://github.com/cloudfoundry-incubator/docker-boshrelease/releases/download/v33.0.0/docker-release-33.0.0.tgz
     version: 33.0.0
   - name: bpm
     sha1: 4b6ebfdaa467c04855528172b099e565d679e0f5
