--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -259,9 +259,9 @@ releases:
   url: https://storage.googleapis.com/kubo-precompiled-releases/docker-33.0.0-ubuntu-xenial-170.9.tgz
   version: 33.0.0
 - name: bpm
-  sha1: e0bc1f3c1ceadc012fcc39a04ae822d888222b16
-  url: https://storage.googleapis.com/kubo-precompiled-releases/bpm-0.13.0-ubuntu-xenial-170.9.tgz
-  version: 0.13.0
+  sha1: 0d1f134c7c26e415ff92bf4b6ec198e4058269b6
+  url: https://storage.googleapis.com/kubo-precompiled-releases/bpm-1.0.0-ubuntu-xenial-170.9-20181129-165935-980466543.tgz
+  version: 1.0.0
 stemcells:
 - alias: default
   os: ubuntu-xenial
