--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -247,9 +247,9 @@ instance_groups:
 name: cfcr
 releases:
 - name: kubo
-  sha1: d3f72f85fd5d5ebfcf942117f56c7ac2d6f8d81b
-  url: https://github.com/cloudfoundry-incubator/kubo-release/releases/download/v0.24.0/kubo-release-0.24.0.tgz
-  version: 0.24.0
+  sha1: a2ac13553df173120c938c60cbeb5dc1dacd13c8
+  url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-0.25.0-ubuntu-xenial-170.9-20181205-164254-356055935.tgz
+  version: 0.25.0
 - name: cfcr-etcd
   sha1: e8c8f485aed039a8cee6cb8b028697294e7d2fbd
   url: https://github.com/cloudfoundry-incubator/cfcr-etcd-release/releases/download/v1.8.0/cfcr-etcd-release-1.8.0.tgz
