--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -51,133 +51,160 @@ instance_groups:
         apiVersion: audit.k8s.io/v1beta1
         kind: Policy
         rules:
-          # The following requests were manually identified as high-volume and low-risk,
-          # so drop them.
-          - level: None
-            users: ["system:kube-proxy"]
-            verbs: ["watch"]
+        - level: None
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["endpoints", "services", "services/status"]
-          - level: None
-            users: ["kubelet"] # legacy kubelet identity
-            verbs: ["get"]
+            - endpoints
+            - services
+            - services/status
+          users:
+          - system:kube-proxy
+          verbs:
+          - watch
+        - level: None
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["nodes", "nodes/status"]
-          - level: None
-            userGroups: ["system:nodes"]
-            verbs: ["get"]
+            - nodes
+            - nodes/status
+          users:
+          - kubelet
+          verbs:
+          - get
+        - level: None
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["nodes", "nodes/status"]
-          - level: None
-            users:
-              - system:kube-controller-manager
-              - system:kube-scheduler
-              - system:serviceaccount:kube-system:endpoint-controller
-            verbs: ["get", "update"]
-            namespaces: ["kube-system"]
+            - nodes
+            - nodes/status
+          userGroups:
+          - system:nodes
+          verbs:
+          - get
+        - level: None
+          namespaces:
+          - kube-system
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["endpoints"]
-          - level: None
-            users: ["system:apiserver"]
-            verbs: ["get"]
+            - endpoints
+          users:
+          - system:kube-controller-manager
+          - system:kube-scheduler
+          - system:serviceaccount:kube-system:endpoint-controller
+          verbs:
+          - get
+          - update
+        - level: None
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["namespaces", "namespaces/status", "namespaces/finalize"]
-          # Don't log HPA fetching metrics.
-          - level: None
-            users:
-              - system:kube-controller-manager
-            verbs: ["get", "list"]
+            - namespaces
+            - namespaces/status
+            - namespaces/finalize
+          users:
+          - system:apiserver
+          verbs:
+          - get
+        - level: None
+          resources:
+          - group: metrics.k8s.io
+          users:
+          - system:kube-controller-manager
+          verbs:
+          - get
+          - list
+        - level: None
+          nonResourceURLs:
+          - /healthz*
+          - /version
+          - /swagger*
+        - level: None
+          resources:
+          - group: ""
             resources:
-              - group: "metrics.k8s.io"
-          # Don't log these read-only URLs.
-          - level: None
-            nonResourceURLs:
-              - /healthz*
-              - /version
-              - /swagger*
-          # Don't log events requests.
-          - level: None
+            - events
+        - level: Request
+          omitStages:
+          - RequestReceived
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["events"]
-          - level: Request
-            userGroups: ["system:nodes"]
-            verbs: ["update","patch"]
+            - nodes/status
+            - pods/status
+          userGroups:
+          - system:nodes
+          verbs:
+          - update
+          - patch
+        - level: Request
+          omitStages:
+          - RequestReceived
+          users:
+          - system:serviceaccount:kube-system:namespace-controller
+          verbs:
+          - deletecollection
+        - level: Metadata
+          omitStages:
+          - RequestReceived
+          resources:
+          - group: ""
             resources:
-              - group: "" # core
-                resources: ["nodes/status", "pods/status"]
-            omitStages:
-              - "RequestReceived"
-          # deletecollection calls can be large, don't log responses for expected namespace deletions
-          - level: Request
-            users: ["system:serviceaccount:kube-system:namespace-controller"]
-            verbs: ["deletecollection"]
-            omitStages:
-              - "RequestReceived"
-          # Secrets, ConfigMaps, and TokenReviews can contain sensitive & binary data,
-          # so only log at the Metadata level.
-          - level: Metadata
+            - secrets
+            - configmaps
+          - group: authentication.k8s.io
             resources:
-              - group: "" # core
-                resources: ["secrets", "configmaps"]
-              - group: authentication.k8s.io
-                resources: ["tokenreviews"]
-            omitStages:
-              - "RequestReceived"
-          # Get repsonses can be large; skip them.
-          - level: Request
-            verbs: ["get", "list", "watch"]
-            resources:
-              - group: "" # core
-              - group: "admissionregistration.k8s.io"
-              - group: "apiextensions.k8s.io"
-              - group: "apiregistration.k8s.io"
-              - group: "apps"
-              - group: "authentication.k8s.io"
-              - group: "authorization.k8s.io"
-              - group: "autoscaling"
-              - group: "batch"
-              - group: "certificates.k8s.io"
-              - group: "extensions"
-              - group: "metrics.k8s.io"
-              - group: "networking.k8s.io"
-              - group: "policy"
-              - group: "rbac.authorization.k8s.io"
-              - group: "settings.k8s.io"
-              - group: "storage.k8s.io"
-            omitStages:
-              - "RequestReceived"
-          # Default level for known APIs
-          - level: RequestResponse
-            resources:
-              - group: "" # core
-              - group: "admissionregistration.k8s.io"
-              - group: "apiextensions.k8s.io"
-              - group: "apiregistration.k8s.io"
-              - group: "apps"
-              - group: "authentication.k8s.io"
-              - group: "authorization.k8s.io"
-              - group: "autoscaling"
-              - group: "batch"
-              - group: "certificates.k8s.io"
-              - group: "extensions"
-              - group: "metrics.k8s.io"
-              - group: "networking.k8s.io"
-              - group: "policy"
-              - group: "rbac.authorization.k8s.io"
-              - group: "settings.k8s.io"
-              - group: "storage.k8s.io"
-            omitStages:
-              - "RequestReceived"
-          # Default level for all other requests.
-          - level: Metadata
-            omitStages:
-              - "RequestReceived"
+            - tokenreviews
+        - level: Request
+          omitStages:
+          - RequestReceived
+          resources:
+          - group: ""
+          - group: admissionregistration.k8s.io
+          - group: apiextensions.k8s.io
+          - group: apiregistration.k8s.io
+          - group: apps
+          - group: authentication.k8s.io
+          - group: authorization.k8s.io
+          - group: autoscaling
+          - group: batch
+          - group: certificates.k8s.io
+          - group: extensions
+          - group: metrics.k8s.io
+          - group: networking.k8s.io
+          - group: policy
+          - group: rbac.authorization.k8s.io
+          - group: settings.k8s.io
+          - group: storage.k8s.io
+          verbs:
+          - get
+          - list
+          - watch
+        - level: RequestResponse
+          omitStages:
+          - RequestReceived
+          resources:
+          - group: ""
+          - group: admissionregistration.k8s.io
+          - group: apiextensions.k8s.io
+          - group: apiregistration.k8s.io
+          - group: apps
+          - group: authentication.k8s.io
+          - group: authorization.k8s.io
+          - group: autoscaling
+          - group: batch
+          - group: certificates.k8s.io
+          - group: extensions
+          - group: metrics.k8s.io
+          - group: networking.k8s.io
+          - group: policy
+          - group: rbac.authorization.k8s.io
+          - group: settings.k8s.io
+          - group: storage.k8s.io
+        - level: Metadata
+          omitStages:
+          - RequestReceived
       k8s-args:
         audit-log-maxage: 0
         audit-log-maxbackup: 0
@@ -396,7 +423,7 @@ releases:
 stemcells:
 - alias: default
   os: ubuntu-xenial
-  version: 170.12
+  version: 170.13
 update:
   canaries: 1
   canary_watch_time: 10000-300000
