--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -51,160 +51,133 @@ instance_groups:
         apiVersion: audit.k8s.io/v1beta1
         kind: Policy
         rules:
-        - level: None
-          resources:
-          - group: ""
+          # The following requests were manually identified as high-volume and low-risk,
+          # so drop them.
+          - level: None
+            users: ["system:kube-proxy"]
+            verbs: ["watch"]
             resources:
-            - endpoints
-            - services
-            - services/status
-          users:
-          - system:kube-proxy
-          verbs:
-          - watch
-        - level: None
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["endpoints", "services", "services/status"]
+          - level: None
+            users: ["kubelet"] # legacy kubelet identity
+            verbs: ["get"]
             resources:
-            - nodes
-            - nodes/status
-          users:
-          - kubelet
-          verbs:
-          - get
-        - level: None
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["nodes", "nodes/status"]
+          - level: None
+            userGroups: ["system:nodes"]
+            verbs: ["get"]
             resources:
-            - nodes
-            - nodes/status
-          userGroups:
-          - system:nodes
-          verbs:
-          - get
-        - level: None
-          namespaces:
-          - kube-system
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["nodes", "nodes/status"]
+          - level: None
+            users:
+              - system:kube-controller-manager
+              - system:kube-scheduler
+              - system:serviceaccount:kube-system:endpoint-controller
+            verbs: ["get", "update"]
+            namespaces: ["kube-system"]
             resources:
-            - endpoints
-          users:
-          - system:kube-controller-manager
-          - system:kube-scheduler
-          - system:serviceaccount:kube-system:endpoint-controller
-          verbs:
-          - get
-          - update
-        - level: None
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["endpoints"]
+          - level: None
+            users: ["system:apiserver"]
+            verbs: ["get"]
             resources:
-            - namespaces
-            - namespaces/status
-            - namespaces/finalize
-          users:
-          - system:apiserver
-          verbs:
-          - get
-        - level: None
-          resources:
-          - group: metrics.k8s.io
-          users:
-          - system:kube-controller-manager
-          verbs:
-          - get
-          - list
-        - level: None
-          nonResourceURLs:
-          - /healthz*
-          - /version
-          - /swagger*
-        - level: None
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["namespaces", "namespaces/status", "namespaces/finalize"]
+          # Don't log HPA fetching metrics.
+          - level: None
+            users:
+              - system:kube-controller-manager
+            verbs: ["get", "list"]
             resources:
-            - events
-        - level: Request
-          omitStages:
-          - RequestReceived
-          resources:
-          - group: ""
+              - group: "metrics.k8s.io"
+          # Don't log these read-only URLs.
+          - level: None
+            nonResourceURLs:
+              - /healthz*
+              - /version
+              - /swagger*
+          # Don't log events requests.
+          - level: None
             resources:
-            - nodes/status
-            - pods/status
-          userGroups:
-          - system:nodes
-          verbs:
-          - update
-          - patch
-        - level: Request
-          omitStages:
-          - RequestReceived
-          users:
-          - system:serviceaccount:kube-system:namespace-controller
-          verbs:
-          - deletecollection
-        - level: Metadata
-          omitStages:
-          - RequestReceived
-          resources:
-          - group: ""
+              - group: "" # core
+                resources: ["events"]
+          - level: Request
+            userGroups: ["system:nodes"]
+            verbs: ["update","patch"]
             resources:
-            - secrets
-            - configmaps
-          - group: authentication.k8s.io
+              - group: "" # core
+                resources: ["nodes/status", "pods/status"]
+            omitStages:
+              - "RequestReceived"
+          # deletecollection calls can be large, don't log responses for expected namespace deletions
+          - level: Request
+            users: ["system:serviceaccount:kube-system:namespace-controller"]
+            verbs: ["deletecollection"]
+            omitStages:
+              - "RequestReceived"
+          # Secrets, ConfigMaps, and TokenReviews can contain sensitive & binary data,
+          # so only log at the Metadata level.
+          - level: Metadata
             resources:
-            - tokenreviews
-        - level: Request
-          omitStages:
-          - RequestReceived
-          resources:
-          - group: ""
-          - group: admissionregistration.k8s.io
-          - group: apiextensions.k8s.io
-          - group: apiregistration.k8s.io
-          - group: apps
-          - group: authentication.k8s.io
-          - group: authorization.k8s.io
-          - group: autoscaling
-          - group: batch
-          - group: certificates.k8s.io
-          - group: extensions
-          - group: metrics.k8s.io
-          - group: networking.k8s.io
-          - group: policy
-          - group: rbac.authorization.k8s.io
-          - group: settings.k8s.io
-          - group: storage.k8s.io
-          verbs:
-          - get
-          - list
-          - watch
-        - level: RequestResponse
-          omitStages:
-          - RequestReceived
-          resources:
-          - group: ""
-          - group: admissionregistration.k8s.io
-          - group: apiextensions.k8s.io
-          - group: apiregistration.k8s.io
-          - group: apps
-          - group: authentication.k8s.io
-          - group: authorization.k8s.io
-          - group: autoscaling
-          - group: batch
-          - group: certificates.k8s.io
-          - group: extensions
-          - group: metrics.k8s.io
-          - group: networking.k8s.io
-          - group: policy
-          - group: rbac.authorization.k8s.io
-          - group: settings.k8s.io
-          - group: storage.k8s.io
-        - level: Metadata
-          omitStages:
-          - RequestReceived
+              - group: "" # core
+                resources: ["secrets", "configmaps"]
+              - group: authentication.k8s.io
+                resources: ["tokenreviews"]
+            omitStages:
+              - "RequestReceived"
+          # Get repsonses can be large; skip them.
+          - level: Request
+            verbs: ["get", "list", "watch"]
+            resources:
+              - group: "" # core
+              - group: "admissionregistration.k8s.io"
+              - group: "apiextensions.k8s.io"
+              - group: "apiregistration.k8s.io"
+              - group: "apps"
+              - group: "authentication.k8s.io"
+              - group: "authorization.k8s.io"
+              - group: "autoscaling"
+              - group: "batch"
+              - group: "certificates.k8s.io"
+              - group: "extensions"
+              - group: "metrics.k8s.io"
+              - group: "networking.k8s.io"
+              - group: "policy"
+              - group: "rbac.authorization.k8s.io"
+              - group: "settings.k8s.io"
+              - group: "storage.k8s.io"
+            omitStages:
+              - "RequestReceived"
+          # Default level for known APIs
+          - level: RequestResponse
+            resources:
+              - group: "" # core
+              - group: "admissionregistration.k8s.io"
+              - group: "apiextensions.k8s.io"
+              - group: "apiregistration.k8s.io"
+              - group: "apps"
+              - group: "authentication.k8s.io"
+              - group: "authorization.k8s.io"
+              - group: "autoscaling"
+              - group: "batch"
+              - group: "certificates.k8s.io"
+              - group: "extensions"
+              - group: "metrics.k8s.io"
+              - group: "networking.k8s.io"
+              - group: "policy"
+              - group: "rbac.authorization.k8s.io"
+              - group: "settings.k8s.io"
+              - group: "storage.k8s.io"
+            omitStages:
+              - "RequestReceived"
+          # Default level for all other requests.
+          - level: Metadata
+            omitStages:
+              - "RequestReceived"
       k8s-args:
         audit-log-maxage: 0
         audit-log-maxbackup: 0
@@ -409,21 +382,21 @@ releases:
   url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-0.25.0-ubuntu-xenial-170.9-20181205-164254-356055935.tgz
   version: 0.25.0
 - name: cfcr-etcd
-  sha1: 098cc7c7ada3809447de08eff44717283fdcc401
-  url: https://storage.googleapis.com/kubo-precompiled-releases/cfcr-etcd-1.8.0-ubuntu-xenial-170.13-20181212-223108-855191388.tgz
+  sha1: 61761f3e62a17a177ddb7e66ddbc1338066313e8
+  url: https://storage.googleapis.com/kubo-precompiled-releases/cfcr-etcd-1.8.0-ubuntu-xenial-170.12-20181206-155457-049495756.tgz
   version: 1.8.0
 - name: docker
-  sha1: c69b8dc03c198024f6e44d0534121a990d39930f
-  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-33.0.0-ubuntu-xenial-170.13-20181212-222707-588292725.tgz
+  sha1: dec899c209b3332005fa63f1bf88325a6bbe3efa
+  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-33.0.0-ubuntu-xenial-170.12-20181206-155054-332934337.tgz
   version: 33.0.0
 - name: bpm
-  sha1: 281f9e816c59a5f7b8d63bc007094aca65f27362
-  url: https://storage.googleapis.com/kubo-precompiled-releases/bpm-1.0.0-ubuntu-xenial-170.13-20181212-223520-855057188.tgz
+  sha1: 7e4b04a72ae41950808bb8862ecbbfb1369b20af
+  url: https://storage.googleapis.com/kubo-precompiled-releases/bpm-1.0.0-ubuntu-xenial-170.12-20181206-155858-680191336.tgz
   version: 1.0.0
 stemcells:
 - alias: default
   os: ubuntu-xenial
-  version: 170.13
+  version: 170.12
 update:
   canaries: 1
   canary_watch_time: 10000-300000
