Change audit-log-maxsize to be 10TB
* This prevents k8s trying to logrotate which causes lots of open
filedescriptors when `audit-log-maxage` and `audit-log-maxbackup` are
both set to 0.
* In reality we should just let Bosh control logrotation

[#162165401]

Signed-off-by: Iain Sproat <isproat@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -208,7 +208,7 @@ instance_groups:
       k8s-args:
         audit-log-maxage: 0
         audit-log-maxbackup: 0
-        audit-log-maxsize: 0
+        audit-log-maxsize: 10000000 # this is 10TBs which prevents k8s logrotate
         audit-log-path: /var/vcap/sys/log/kube-apiserver/audit.log
         audit-policy-file: /var/vcap/jobs/kube-apiserver/config/audit_policy.yml
         authorization-mode: RBAC
