Default to coredns instead of kube-dns
* kube-dns can be applied in an ops-file

[#159739243]

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -13,7 +13,7 @@ instance_groups:
   - name: apply-specs
     properties:
       addons:
-      - kube-dns
+      - coredns
       - metrics-server
       - heapster
       - kubernetes-dashboard
