--- a/manifests/ops-files/use-persistent-disk-for-workers.yml
+++ b/manifests/ops-files/use-persistent-disk-for-workers.yml
@@ -1,6 +1,6 @@
 - type: replace
   path: /instance_groups/name=worker?/persistent_disk
-  value: ((disk_type))
+  value: ((disk_size))
 - type: replace
   path: /instance_groups/name=worker/jobs/name=docker/properties/store_dir
   value: /var/vcap/store
