--- a/manifests/ops-files/example-vars-files/system-specs.yml
+++ b/manifests/ops-files/example-vars-files/system-specs.yml
@@ -4,5 +4,6 @@ tls-kubernetes:
   ca: ca
   certificate: cert
   private_key: key
+tls-heapster: tls-heapster
 tls-influxdb: tls-influxdb
 tls-kubernetes-dashboard: tls-kubernetes-dashboard
