Add new tagging format for kubernetes_cluster_tag for AWS
[#163418444]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/manifests/ops-files/iaas/aws/lb.yml
+++ b/manifests/ops-files/iaas/aws/lb.yml
@@ -2,3 +2,4 @@
   path: /tags?
   value:
     KubernetesCluster: ((kubernetes_cluster_tag))
+    kubernetes.io/cluster/((kubernetes_cluster_tag)): ""
