--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -203,6 +203,7 @@ instance_groups:
           omitStages:
           - RequestReceived
       k8s-args:
+        allow-privileged: true
         audit-log-maxage: 0
         audit-log-maxbackup: 7
         audit-log-maxsize: 49
@@ -263,6 +264,8 @@ instance_groups:
         tls-cert-file: /var/vcap/jobs/kube-controller-manager/config/kube-controller-manager-cert.pem
         tls-private-key-file: /var/vcap/jobs/kube-controller-manager/config/kube-controller-manager-private-key.pem
         use-service-account-credentials: true
+        cluster-cidr: 10.200.0.0/16
+        allocate-node-cidrs: true
         v: 2
       service-account-private-key: ((service-account-key.private_key))
       tls:
@@ -328,7 +331,6 @@ instance_groups:
       default_ulimits:
       - nofile=65536
       env: {}
-      flannel: true
       ip_masq: false
       iptables: false
       live_restore: true
@@ -346,7 +348,7 @@ instance_groups:
       api-token: ((kubelet-password))
       drain-api-token: ((kubelet-drain-password))
       k8s-args:
-        cni-bin-dir: /var/vcap/jobs/kubelet/packages/cni/bin
+        allow-privileged: true
         container-runtime: docker
         docker: unix:///var/vcap/sys/run/docker/docker.sock
         docker-endpoint: unix:///var/vcap/sys/run/docker/docker.sock
