--- a/manifests/ops-files/set-fs-inotify-limit.yml
+++ b/manifests/ops-files/set-fs-inotify-limit.yml
@@ -6,7 +6,7 @@
         release: os-conf
         properties:
           sysctl:
-          - fs.inotify.max_user_watches=65536
+          - fs.inotify.max_user_watches=((fs_inotify_max_user_watches))
     name: fs-inotify-limit
 
 - type: replace
