Apply fs-inotify-limit addon to only linux machines
Signed-off-by: Ben Fuller <bfuller@pivotal.io>

--- a/manifests/ops-files/set-fs-inotify-limit.yml
+++ b/manifests/ops-files/set-fs-inotify-limit.yml
@@ -8,6 +8,10 @@
           sysctl:
           - fs.inotify.max_user_watches=((fs_inotify_max_user_watches))
     name: fs-inotify-limit
+    include:
+      stemcell:
+      - os: ubuntu-trusty
+      - os: ubuntu-xenial
 
 - type: replace
   path: /releases/-
