--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -2,7 +2,7 @@
   path: /stemcells/-
   value:
     alias: windows
-    os: windows1803
+    os: windows2019
     version: latest
 
 - type: replace
@@ -60,8 +60,9 @@
           kubeconfig: C:\var\vcap\jobs\kubelet-windows\config\kubeconfig
           network-plugin: cni
           pod-infra-container-image: kubeletwin/pause
-          register-with-taints: windows=1803:NoSchedule
+          register-with-taints: windows=2019:NoSchedule
           resolv-conf: ""
+          runtime-request-timeout: 1m
         tls:
           kubelet: ((tls-kubelet))
           kubelet-client-ca:
