Add name keys to Windows releases to allow autobumping
We're adapting the ci bump-boshrelease job to be able to bump these
opsfiles releases. We needed to add a `name` key to them so that the
opsfile can target them.

Signed-off-by: Leah Hanson <lhanson@pivotal.io>

--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -5,8 +5,10 @@
     os: windows2019
     version: latest
 
-- type: replace
+- name: windows-tools
+  note: the name key is necessary for bump-boshrelease.sh
   path: /releases/-
+  type: replace
   value:
     name: "windows-tools"
     version: "32"
