--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -329,7 +329,7 @@ instance_groups:
     properties:
       bridge: cni0
       default_ulimits:
-      - nofile=65536
+      - nofile=1048576
       env: {}
       flannel: true
       ip_masq: false
