Add missing versions to root user under etcd job
[#163786805]

Co-authored-by: Lubron Zhan <lzhan@vmware.com>
Co-authored-by: Winnie Kwon <lkwon@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -317,6 +317,7 @@ instance_groups:
       users:
       - name: root
         password: ((etcd_user_root_password))
+        versions: [ "v2" ]
       - name: flanneld
         permissions:
           read:
