Add users field and more cfcr certs to cfcr etcd job (#393)
* Add etcdctl-flanneld cert to etcd

[#163786805]

* Move the etcdctl cert from etcd job to flanneld job directly

[#163786805]

* Change cidr shouldn't overwrite the flanneld properties

[#163786805]

* Add missing versions to root user under etcd job

[#163786805]

Co-authored-by: Lubron Zhan <lzhan@vmware.com>
Co-authored-by: Winnie Kwon <lkwon@pivotal.io>

* Rmeove v0-29-0 from etcd-flanneld cert

* Add cert to duration opsfile

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -43,6 +43,12 @@ instance_groups:
     release: bpm
   - name: flanneld
     release: kubo
+    properties:
+      tls:
+        etcdctl:
+          ca: ((tls-etcdctl-flanneld.ca))
+          certificate: ((tls-etcdctl-flanneld.certificate))
+          private_key: ((tls-etcdctl-flanneld.private_key))
   - name: kube-apiserver
     properties:
       admin-password: ((kubo-admin-password))
@@ -308,6 +314,18 @@ instance_groups:
           ca: ((tls-etcd-v0-29-0.ca))
           certificate: ((tls-etcd-v0-29-0.certificate))
           private_key: ((tls-etcd-v0-29-0.private_key))
+      users:
+      - name: root
+        password: ((etcd_user_root_password))
+        versions: [ "v2" ]
+      - name: flanneld
+        permissions:
+          read:
+          - /coreos.com/network/*
+          write:
+          - /coreos.com/network/*
+        password: ((etcd_user_flanneld_password))
+        versions: [ "v2" ]
     release: cfcr-etcd
   - name: smoke-tests
     release: kubo
@@ -325,6 +343,12 @@ instance_groups:
   jobs:
   - name: flanneld
     release: kubo
+    properties:
+      tls:
+        etcdctl:
+          ca: ((tls-etcdctl-flanneld.ca))
+          certificate: ((tls-etcdctl-flanneld.certificate))
+          private_key: ((tls-etcdctl-flanneld.private_key))
   - name: docker
     properties:
       bridge: cni0
@@ -446,6 +470,10 @@ variables:
   type: password
 - name: kube-scheduler-password
   type: password
+- name: etcd_user_root_password
+  type: password
+- name: etcd_user_flanneld_password
+  type: password
 - name: kubo_ca
   options:
     common_name: ca
@@ -510,7 +538,14 @@ variables:
 - name: tls-etcdctl-v0-29-0
   options:
     ca: etcd_ca
-    common_name: etcdClient
+    common_name: root
+    extended_key_usage:
+    - client_auth
+  type: certificate
+- name: tls-etcdctl-flanneld
+  options:
+    ca: etcd_ca
+    common_name: flanneld
     extended_key_usage:
     - client_auth
   type: certificate
