--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -27,6 +27,8 @@ instance_groups:
         kubernetes-dashboard: ((tls-kubernetes-dashboard))
         metrics-server: ((tls-metrics-server))
     release: kubo
+  - name: kubernetes-dependencies
+    release: kubernetes
   lifecycle: errand
   name: apply-addons
   networks:
@@ -49,6 +51,8 @@ instance_groups:
           certificate: ((tls-etcdctl-flanneld.certificate))
           private_key: ((tls-etcdctl-flanneld.private_key))
     release: kubo
+  - name: kubernetes-dependencies
+    release: kubernetes
   - name: kube-apiserver
     properties:
       admin-password: ((kubo-admin-password))
