Move all kubernetes-roles policies from kubo-release to opsfile
[#165551713]

--- a/manifests/ops-files/addon-specs/coredns.yml
+++ b/manifests/ops-files/addon-specs/coredns.yml
@@ -1,5 +1,5 @@
 - type: replace
-  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/coredns-spec?
+  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/specs?/coredns?
   value: |
     ---
     apiVersion: v1
