--- a/manifests/ops-files/addon-specs/metrics-server.yml
+++ b/manifests/ops-files/addon-specs/metrics-server.yml
@@ -1,5 +1,5 @@
 - type: replace
-  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/metrics-server-spec?
+  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/specs?/metrics-server?
   value: |
     ---
     # ------------------- Auth Delegator ------------------- #
