--- a/manifests/ops-files/iaas/vsphere/cloud-provider.yml
+++ b/manifests/ops-files/iaas/vsphere/cloud-provider.yml
@@ -62,3 +62,20 @@
   path: /instance_groups/name=apply-addons/jobs/name=apply-specs/consumes?
   value:
     cloud-provider: {from: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kubernetes-roles/properties/specs?/cloud-provider?
+  value: |
+    ---
+    kind: ClusterRoleBinding
+    apiVersion: rbac.authorization.k8s.io/v1
+    metadata:
+      name: kubo:internal:vsphere-cloud-provider
+    subjects:
+    - kind: ServiceAccount
+      name: vsphere-cloud-provider
+      namespace: kube-system
+    roleRef:
+      kind: ClusterRole
+      name: system:node
+      apiGroup: rbac.authorization.k8s.io
