Remove opsfile of addons-spec and split coredns spec
[#165551713]

--- a/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
+++ b/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
@@ -1,7 +1,8 @@
 vm_extensions:
 - cloud_properties:
+    backend_service: ((cfcr_backend_service))
     service_account: ((cfcr_master_service_account_address))
   name: ((deployment_name))-master-cloud-properties
 - cloud_properties:
-    service_account: ((cfcr_worker_service_account_address))
+    service_accoqunt: ((cfcr_worker_service_account_address))
   name: ((deployment_name))-worker-cloud-properties
