Hardcode a url for kubernetes-release
[#165551713]

Co-authored-by: Winnie Kwon <lkwon@pivotal.io>
Co-authored-by: Lubron Zhan <lzhan@vmware.com>
Signed-off-by: Sagar Muchhal <muchhals@vmware.com>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -1160,6 +1160,7 @@ releases:
   version: 1.0.4
 - name: kubernetes
   version: latest
+  url: a
 stemcells:
 - alias: default
   os: ubuntu-xenial
